AI activated (Seif's model merged)