@@ -8,10 +8,10 @@ import java.util.*;
 public class Grid {
     public static final int BOARD_SIZE = 91;
     public static final int MID = 45;
-    private final Tile[][] grid;
+    private final Tile[][] tilesArray;
 
     public Grid() {
-        this.grid = new Tile[BOARD_SIZE][BOARD_SIZE];
+        this.tilesArray = new Tile[BOARD_SIZE][BOARD_SIZE];
         for (int row = 0; row < getRowCount(); row++) {
             for (int col = 0; col < getColumnCount(); col++) {
                 setTile(row, col, null);
@@ -21,7 +21,7 @@ public class Grid {
     }
 
     public Grid(Grid grid) {
-        this.grid = new Tile[BOARD_SIZE][BOARD_SIZE];
+        this.tilesArray = new Tile[BOARD_SIZE][BOARD_SIZE];
         for (int row = 0; row < getRowCount(); row++) {
             for (int col = 0; col < getColumnCount(); col++) {
                 setTile(row, col, grid.getTile(row, col));
@@ -34,16 +34,16 @@ public class Grid {
     }
 
     public Tile getTile(int row, int col) {
-        return grid[row][col];
+        return tilesArray[row][col];
     }
 
 
     public int getRowCount() {
-        return grid.length;
+        return tilesArray.length;
     }
 
     public int getColumnCount() {
-        return grid[0].length;
+        return tilesArray[0].length;
     }
 
     /**
@@ -52,7 +52,7 @@ public class Grid {
      * @return if a Tile == null (empty)
      */
     public boolean isEmpty(int row, int col) {
-        return grid[row][col] == null;
+        return tilesArray[row][col] == null;
     }
 
 
@@ -64,11 +64,11 @@ public class Grid {
      * @return if a Tile is not empty
      */
     public boolean isNotEmpty(int row, int col) {
-        return grid[row][col] != null;
+        return tilesArray[row][col] != null;
     }
 
     public void setTile(int row, int col, Tile fill) {
-        grid[row][col] = fill;
+        tilesArray[row][col] = fill;
     }
 
 
@@ -132,7 +132,7 @@ public class Grid {
                 }
             }
             case -1 -> {
-                if (foundEmptyTiles(moveList)){
+                if (foundEmptyTiles(moveList)) {
                     return false;
                 }
                 return isValidMove(moveList.get(0));
@@ -145,6 +145,129 @@ public class Grid {
 //        direction = this.determineDirection(moveList);
         for (Move move : moveList) {
             if (isNotConnected(move, moveList)) return false;
+        }
+        Grid grid = getDeepCopy();
+        for (Move move : moveList) {
+            int row = move.getCoordinate().getRow();
+            int col = move.getCoordinate().getColumn();
+            if (grid.isNotEmpty(row, col)) {
+                grid.boardRemoveMove(move);
+            }
+        }
+        for (Move move : moveList) {
+
+            if (!grid.isValidMove(move)) {
+                return false;
+            }
+            grid.boardAddMove(move);
+        }
+        return !foundEmptyTiles(moveList);
+    }
+
+    public boolean isValidMoves(Turn moveList) {
+        int direction = this.determineDirection(moveList);
+        switch (direction) {
+            case 0 -> {
+                //make sure the move is on the same row
+                int currentCoordRow = moveList.get(0).getCoordinate().getRow();
+                for (int coord : moveList.stream().map(Move::getCoordinate).map(Move.Coordinate::getRow).toList()) {
+                    if (coord != currentCoordRow) {
+                        return false;
+                    }
+//                    if (foundEmptyTiles(moveList)) {
+//                        return false;
+//                    }
+                }
+
+            }
+            case 1 -> {
+                //make sure the move is on the same column
+                int currentCoordColumn = moveList.get(0).getCoordinate().getColumn();
+                for (int coord : moveList.stream().map(Move::getCoordinate).map(Move.Coordinate::getColumn).toList()) {
+                    if (coord != currentCoordColumn) {
+                        return false;
+                    }
+//                    if (foundEmptyTiles(moveList)) {
+//                        return false;
+//                    }
+                }
+            }
+            case -1 -> {
+//                if (foundEmptyTiles(moveList)){
+//                    return false;
+//                }
+                return isValidMove(moveList.get(0));
+            }
+
+            case -100, -2 -> {
+                return false;
+            }
+        }
+//        direction = this.determineDirection(moveList);
+        for (Move move : moveList) {
+            if (isNotConnected(move, moveList)) return false;
+        }
+        Grid grid = getDeepCopy();
+        for (Move move : moveList) {
+            int row = move.getCoordinate().getRow();
+            int col = move.getCoordinate().getColumn();
+            if (grid.isNotEmpty(row, col)) {
+                grid.boardRemoveMove(move);
+            }
+        }
+        for (Move move : moveList) {
+
+            if (!grid.isValidMove(move)) {
+                return false;
+            }
+            grid.boardAddMove(move);
+        }
+        return true;
+    }
+    public boolean isValidMoves(List<Move> moveList) {
+        Turn turn = new Turn();
+        turn.addAll(moveList);
+        int direction = this.determineDirection(turn);
+        switch (direction) {
+            case 0 -> {
+                //make sure the move is on the same row
+                int currentCoordRow = moveList.get(0).getCoordinate().getRow();
+                for (int coord : moveList.stream().map(Move::getCoordinate).map(Move.Coordinate::getRow).toList()) {
+                    if (coord != currentCoordRow) {
+                        return false;
+                    }
+//                    if (foundEmptyTiles(turn)) {
+//                        return false;
+//                    }
+                }
+
+            }
+            case 1 -> {
+                //make sure the move is on the same column
+                int currentCoordColumn = moveList.get(0).getCoordinate().getColumn();
+                for (int coord : moveList.stream().map(Move::getCoordinate).map(Move.Coordinate::getColumn).toList()) {
+                    if (coord != currentCoordColumn) {
+                        return false;
+                    }
+//                    if (foundEmptyTiles(turn)) {
+//                        return false;
+//                    }
+                }
+            }
+            case -1 -> {
+//                if (foundEmptyTiles(turn)){
+//                    return false;
+//                }
+                return isValidMove(moveList.get(0));
+            }
+
+            case -100, -2 -> {
+                return false;
+            }
+        }
+//        direction = this.determineDirection(moveList);
+        for (Move move : moveList) {
+            if (isNotConnected(move, turn)) return false;
         }
         Grid grid = getDeepCopy();
         for (Move move : moveList) {
@@ -359,7 +482,7 @@ public class Grid {
         for (int i = 0; i < getRowCount(); i++) {
             for (int j = 0; j < getColumnCount(); j++) {
                 if (isNotEmpty(i, j)) {
-                    result.add(new Move(grid[i][j], new Move.Coordinate(i, j)));
+                    result.add(new Move(tilesArray[i][j], new Move.Coordinate(i, j)));
                 }
             }
         }
@@ -371,6 +494,9 @@ public class Grid {
      */
     public Set<Move> getAllEdges() {
         Set<Move> usedSpaces = getUsedSpaces();
+        if (usedSpaces.isEmpty()) {
+            usedSpaces.add(new Move(null, new Move.Coordinate(MID, MID)));
+        }
         Set<Move> emptySpaces = new HashSet<>();
         for (Move move : usedSpaces) {
             for (int side = 0; side < 4; side++) {
@@ -486,32 +612,31 @@ public class Grid {
 
     //Checks for empty tiles if in between both vertically and horizontally in a moveList of a turn
     private boolean foundEmptyTiles(Turn turn) {
-        ArrayList<Move> moves = new ArrayList<>();
-        for (Move move : turn.getMoves()) {
-            moves.add(move);
-        }
+        LinkedList<Move> moves = new LinkedList<>(turn.getMoves());
         Collections.sort(moves);
-        int firstMoveRow = moves.get(0).getCoordinate().getRow();
-        int lastMoveRow = moves.get(moves.size() - 1).getCoordinate().getRow();
+        int firstMoveRow = moves.getFirst().getCoordinate().getRow();
+        int lastMoveRow = moves.getLast().getCoordinate().getRow();
         int rowLength = firstMoveRow - lastMoveRow;
-        rowLength = Math.abs(rowLength);
-        int firstMoveColumn = moves.get(0).getCoordinate().getColumn();
-        int lastMoveColumn = moves.get(moves.size() - 1).getCoordinate().getColumn();
+        rowLength = Math.abs(rowLength) + 1;
+        int firstMoveColumn = moves.getFirst().getCoordinate().getColumn();
+        int lastMoveColumn = moves.getLast().getCoordinate().getColumn();
         int columnLength = firstMoveColumn - lastMoveColumn;
-        columnLength = Math.abs(columnLength);
+        columnLength = Math.abs(columnLength) + 1;
         Grid grid = getDeepCopy();
-        int col = firstMoveColumn;
-        int row = firstMoveRow;
         for (Move move : moves) {
-            grid.boardAddMove(move);
+            if (grid.isValidMove(move)) {
+                grid.boardAddMove(move);
+            }
         }
         //Horizontally per column
+        int col = firstMoveColumn;
         for (; col < firstMoveColumn + columnLength; col++) {
             Tile tile = grid.getTile(firstMoveRow, col);
             if (tile == null) {
                 return true;
             }
         }
+        col = lastMoveColumn;
         for (; col > firstMoveColumn + columnLength; col--) {
             Tile tile = grid.getTile(firstMoveRow, col);
             if (tile == null) {
@@ -519,12 +644,14 @@ public class Grid {
             }
         }
         //Vertically per row
+        int row = firstMoveRow;
         for (; row < firstMoveRow + rowLength; row++) {
             Tile tile = grid.getTile(row, firstMoveColumn);
             if (tile == null) {
-                return false;
+                return true;
             }
         }
+        row = lastMoveRow;
         for (; row > firstMoveRow + rowLength; row--) {
             Tile tile = grid.getTile(row, firstMoveColumn);
             if (tile == null) {
@@ -533,4 +660,5 @@ public class Grid {
         }
         return false;
     }
+
 }
